--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "wheater-app",
+  "name": "weather-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.8.2",
+    "convert-units": "^2.3.4",
+    "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "react-weathericons": "^1.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
