--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.8.2",
+    "@material-ui/core": "^3.9.3",
     "convert-units": "^2.3.4",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-flexbox-grid": "^2.1.2",
     "react-scripts": "2.1.1",
     "react-weathericons": "^1.0.4"
   },
